working on docs of investors
